--- a/smiley.css
+++ b/smiley.css
@@ -29,3 +29,25 @@
     left: 54px;
     top: 18px;
 }
+
+.mouth {
+    width: 30px;
+    height: 10px;
+    border: solid 1px black;
+    border-radius: 0 0 45px 45px;
+    margin: 16px;
+    position: relative;
+    top: 1em;
+    left: 1em;
+    background-color: black;
+}
+.pupil {
+    width: 2px;
+    height: 2px;
+    border: solid 1px black;
+    border-radius: 2px;
+    position: relative;
+    top: 1px;
+    left: 2px;
+    background-color: black;
+}
