--- a/smiley.css
+++ b/smiley.css
@@ -41,6 +41,7 @@
     left: 1em;
     background-color: black;
 }
+
 .pupil {
     width: 2px;
     height: 2px;
@@ -50,4 +51,71 @@
     top: 1px;
     left: 2px;
     background-color: black;
+}
+
+/*
+    My CSS work lies below
+*/
+
+.tongue {
+    width: 10px;
+    height: 11px;
+    border: solid 1px rgb(255, 70, 70);
+    border-radius: 0 0 45px 45px;
+    margin: 17px;
+    position: relative;
+    top: -.1em;
+    left: 1.6em;
+    background-color: rgb(255, 113, 113);
+}
+
+.unibrow {
+    width: 38px;
+    height: 1px;
+    border: solid 1px rgb(0, 0, 0);
+    border-radius: 0 0 45px 45px;
+    margin: 17px;
+    position: relative;
+    top: -4.5em;
+    left: .55em;
+    background-color: rgb(0, 0, 0);
+}
+
+.eyes {
+    width: 15px;
+    height: 6px;
+    border: solid 1px black;
+    border-radius: 3px;
+    z-index: 1;
+    position: relative;
+    background-color: white;
+}
+
+.leftOne {
+    left: 28px;
+    top: 26px;
+}
+
+.rightOne {
+    left: 50px;
+    top: 18px;
+}
+
+.pupils {
+    width: 2px;
+    height: 2px;
+    border: solid 1px rgb(206, 117, 33);
+    border-radius: 2px;
+    position: relative;
+    top: 1px;
+    left: 2px;
+    background-color: rgb(206, 117, 33);
+}
+
+.myface {
+    width: 75px;
+    height: 85px;
+    border: solid 2px black;
+    background-color: rgb(235, 215, 190);
+    border-radius:30px;
 }
